@@ -5,7 +5,7 @@ WriteMakefile(
     'NAME'		=> 'Games::OpenGL::Font::2D',
     'VERSION_FROM'	=> 'lib/Games/OpenGL/Font/2D.pm', # finds $VERSION
     'PREREQ_PM'		=> {
-			SDL => '1.20.2', # http://bloodgate.com/perl/sdl/
+			SDL => 'v1.20.3', # http://bloodgate.com/perl/sdl/
 			}, # e.g., Module::Name => 1.1
     'LIBS'		=> [ ], # e.g., '-lm'
     'DEFINE'		=> '', # e.g., '-DHAVE_SOMETHING'
