@@ -14,28 +14,28 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 0c92090c9d1e077a99b36194277ddc1199582db7 BUGS
-SHA1 398ab7139ce4e8bdd414b00aae2eeaebfa2f3af4 CHANGES
+SHA1 407ecc4b4b9624d74248445c089cb767c1a4f6a6 CHANGES
 SHA1 f4f1d6c08424bf7550a95ce6911045a98f69e0a8 CREDITS
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 5841d7b4f2e9e1f235ceb0ae7227cd4d71dc8a17 MANIFEST
-SHA1 14ba2ad03c1483a6125ce04cb63b7098a97482c5 Makefile.PL
+SHA1 8240f2673fea4b8e8c615f75f5cf493cef7cedbe Makefile.PL
 SHA1 07c44b07a8fa9704ce07dc42c2d2eff2b0d58a31 README
 SHA1 41f53216265bfaef39688855e48f91475930e600 TODO
 SHA1 fe7311d4b22922ce4a4e666174c0bf9e359d0ff3 data/courier.bmp
 SHA1 e0d9e2f1ce30653ef538d607479ecf715a478195 examples/font.pl
-SHA1 989b9983e29f4cd98afa241c5b6e687e223033e7 examples/lib/SDL/App/FPS/MyFont.pm
-SHA1 05980c62b7b981fca3088d06bfc404359c910818 lib/Games/OpenGL/Font/2D.pm
+SHA1 e6d1f05e5848645470a9a2171744171a43daa2be examples/lib/SDL/App/FPS/MyFont.pm
+SHA1 f68a24b351350f7032a96574a9271b561b12b24f lib/Games/OpenGL/Font/2D.pm
 SHA1 1f3aaa713f195953b6b5202dfd4215360c4a2097 t/chars.txt
-SHA1 feb32b889734512a7ea2ec632a98b9b3fd4f4658 t/font.t
+SHA1 bbde937b6f08ebef4e1b2c82f0d82d54ca976742 t/font.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPn4a0XcLPEOTuEwVAQG51gf+OsSYpkgD75Lbdds/Ok73IPDWel84Oszo
-C3BaRwN3vC/44v1Wwkz0oWlp/TSu6PS5ZvZxCs4sGMdKddhqT8Hi6PhyIys4bDRn
-xAH+rKcOa8xtjkKlZWRRd2K7eCyHrmgvrxnEqcXTPUdRdAusHVHYSTz+K506867b
-iZWcmsJaU+cBIKAPvK2nQtw9NY8ifdFIoOuXQ2961IvSD0yqKIgQyYprAJfN5iFD
-tE9nnGFJMTXgIQN3YWZ+OOtySQVa/8A47x6+xBWVQyTYDpUBLURH1oJCbeSib4xp
-eEXpsvwT8yNSLBes1ZiT71zlT52bGUnSd+jXuQQywvnCNh2hxiC8rw==
-=aFnH
+iQEUAwUBPpMmbHcLPEOTuEwVAQHYVwf4hyx18KRvouDzdK8kOup4hda5SmvCg+rV
+Bh70yrtxzbx8SDa26rn6KLWO8VnCClTpMJuqtejYKSDFcgr6SW68rO10uZJZAn6n
+ymzHO4c2n0RMzyp/dP2KjcE+/z9HnX/lIZlysjjvAuHae99Ke3utN6GQiAnTUCI+
+/tiqBN8iYSESoneZxqkKm3X0mgCFtBTtCws2FO3dedvi/C234CLBB9TS1BjyAQzF
+szplQS91LpCHsG7vV8IamV2BBGEdZX2/HLGLOSdJm41nbJRwYOj4ldypYJTcxz6P
+eLz6ZQErZkuVQCeTBP3yeD3fbAC0w/dbU9LU0uPegKsXGoI14yo6
+=4e6+
 -----END PGP SIGNATURE-----
